<resources>
    <string name="app_name">NotePlus+</string>

    <string name="google_maps_api_key">AIzaSyA-Ew-EcB5r16uPcPLsva01uj3yrvPeJTw</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">Add an attachment</string>
    <string name="btn_text_save">Save</string>

    <string name="note_text_no_happy_places_found_yet_kindly_add_one">No Notes/documents saved yet. Kindly add one.</string>
    <string name="note_saved">Saved notes:- </string>
    <string name="note_saved_appear">Saved notes will appear here:- </string>
    <string name="image_content_description">image</string>

    <string name="btn_text_view_on_map">View on Map</string>
    <string name="add_place_select_current_location_text">Select your current location</string>
    <string name="share">Share</string>

    <string name="share_text">Sharing… #NotePlus+ with %1$d/%2$d. Thank you!</string>
    <string name="add_new_note">Add new note</string>
    <string name="noteplus_offers_you_the_ability_to">NotePlus+ offers you the ability to:</string>
    <string name="save_plain_notes_take_pictures_and_attach_documents">Save plain notes, take pictures and attach documents</string>
    <string name="scan_documents">Scan documents</string>
    <string name="share_saved_notes_and_documents">Share saved notes and documents</string>
</resources>