<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width=   "match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/primary_text_color"
        android:theme="@style/CustomToolbarStyle"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Add notes"
        app:menu="@menu/edit_menu"/>

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_title"
                    android:inputType="textCapWords"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_title">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_description"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/poppins_regular"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_hint_date"
                    android:inputType="text"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_date">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_hint_location"
                    android:inputType="text"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_select_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_place_select_current_location_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/add_place_select_current_location_padding"
                android:text="@string/add_place_select_current_location_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/add_place_select_current_location_textsize"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_location" />

            <TextView
                android:id="@+id/optionalAttachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:fontFamily="@font/poppins_regular"
                android:text="Optional attachment"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_current_location" />

            <ImageView
                android:id="@+id/iv_place_image"
                android:layout_width="@dimen/add_screen_place_image_size"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:padding="@dimen/add_screen_place_image_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/add_screen_image_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/optionalAttachment" />

            <TextView
                android:id="@+id/tv_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bordered"
                android:gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:text="@string/text_add_image"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_6sdp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintBottom_toBottomOf="@+id/iv_place_image"
                app:layout_constraintStart_toEndOf="@+id/iv_place_image"
                app:layout_constraintTop_toTopOf="@+id/iv_place_image" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_bordered"
                android:gravity="center"
                android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                android:text="@string/btn_text_save"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>