<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/primary_text_color"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Welcome"/>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:neumorph_shadowColorDark="@color/colorPrimary"
        android:layout_marginTop="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/kwanu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </soup.neumorphism.NeumorphCardView>


    <TextView
        android:id="@+id/likeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Would you like to:"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/primary_text_color"
        android:layout_marginStart="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cardViewTodo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"

        app:cardElevation="10dp"
        app:neumorph_shadowColorLight="@color/backgroundColorCard"
        android:layout_marginStart="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likeTv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/todoIm"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_to_do_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/todoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save notes"
                android:textColor="@color/primary_text_color"
                android:textSize="14sp"
                android:padding="4dp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todoIm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/scanCardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:neumorph_shadowColorDark="@color/backgroundColorCard"
        app:cardElevation="10dp"
        android:layout_marginEnd="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likeTv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/scanIm"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_logo_3_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/scanTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="Scan document"
                android:textColor="@color/white_color"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scanIm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </soup.neumorphism.NeumorphCardView>

    <View
        android:id="@+id/offerView"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginTop="16sp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTodo" />

    <TextView
        android:id="@+id/offerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/noteplus_offers_you_the_ability_to"
        android:textColor="@color/primary_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/savedImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="8sp"
        android:src="@drawable/ic_done"
        android:background="@drawable/circular_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerTv" />

    <TextView
        android:id="@+id/savedTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:maxLines="2"
        android:layout_marginStart="16sp"
        android:text="@string/save_plain_notes_take_pictures_and_attach_documents"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="@+id/savedImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savedImg"
        app:layout_constraintTop_toTopOf="@+id/savedImg" />

    <ImageView
        android:id="@+id/scanImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="8sp"
        android:src="@drawable/ic_done"
        android:background="@drawable/circular_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savedImg" />

    <TextView
        android:id="@+id/scannedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="16sp"
        android:text="@string/scan_documents"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="@+id/scanImg"
        app:layout_constraintStart_toEndOf="@+id/scanImg"
        app:layout_constraintTop_toTopOf="@+id/scanImg" />

    <ImageView
        android:id="@+id/scanShareImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="8sp"
        android:src="@drawable/ic_done"
        android:background="@drawable/circular_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanImg" />

    <TextView
        android:id="@+id/scannShareTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="16sp"
        android:text="@string/share_saved_notes_and_documents"
        android:textColor="@color/primary_text_color"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="@+id/scanShareImg"
        app:layout_constraintStart_toEndOf="@+id/scanShareImg"
        app:layout_constraintTop_toTopOf="@+id/scanShareImg" />

</androidx.constraintlayout.widget.ConstraintLayout>